# xr-proxy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  server.toml
.github/workflows/: release-xr-share.yml
configs/: client.toml  hub.toml  relay.toml  routing-russia.toml  server.toml  share.toml
deploy/: cert-alert.sh  cert-receive.sh  cert-sync-aeza.sh  xr-hangwatch.sh  xr-hub.service  xr-monitor.sh  xr-proxy-server.service  xr-proxy.init  xr-relay.service  xr-share.service  xr-watchdog.sh
docs/: ARCHITECTURE.md  HUB-DEPLOY.md  OPENWRT.md  TASKS-archive.md  TASKS.md
docs/lld/: 01-control-plane.md  02-android-reliability.md  03-android-logs-ux.md  04-onboarding-qr-uri.md  05-android-rules-editor.md  06-android-visual.md  07-android-per-app-tunnel.md  08-android-multi-server.md  09-multi-mux-pool.md  10-client-multi-vps-failover.md  10-router-multi-vps-failover.md  11-monitoring-health-panel.md  12-android-apk-self-update.md  13-zero-touch-provisioning.md  14-hub-hybrid-rules-editor.md  15-android-trusted-networks.md  16-manual-server-hub-rules.md  17-hub-router-registry.md  18-fleet-metrics-grafana.md  19-file-sharing-agent.md  20-router-remote-management.md  21-messenger.md  22-router-load-balancing.md  23-share-relay-nat.md  24-share-hash-index.md  25-invite-lifecycle.md  27-mux-flow-control.md  28-share-write-scope.md  29-share-url-import.md  30-max-carrier.md
docs/tasks/: XR-015.md  XR-035.md  XR-041.md  XR-042.md  XR-044.md  XR-047.md  XR-049.md  XR-050.md  XR-052.md  XR-055.md  XR-056.md  XR-057.md  XR-058.md  XR-059.md  XR-060.md  XR-061.md  XR-062.md  XR-063.md  XR-064.md  XR-066.md  XR-067.md  XR-068.md  XR-070.md  XR-073.md  XR-076.md  XR-078.md  XR-082.md  XR-083.md  XR-084.md  XR-085.md  XR-086.md  XR-087.md  XR-091.md  XR-093.md  XR-094.md  XR-095.md  XR-098.md  XR-099.md  XR-100.md  XR-101.md  (+29 more)
docs/tasks/archive/2026/: XR-032.md  XR-033.md  XR-035.md  XR-041.md  XR-044.md  XR-046.md  XR-047.md  XR-049.md  XR-050.md  XR-052.md  XR-059.md  XR-086.md  XR-093.md  XR-097.md  XR-098.md  XR-100.md  XR-103.md  XR-106.md  XR-107.md  XR-115.md  XR-123.md  XR-127.md  XR-128.md  XR-135.md  XR-138.md  XR-141.md  XR-167.md  XR-177.md
scripts/: deploy-hub.sh  deploy-router.sh  deploy-server.sh  diagnose.sh  generate-key.sh  install.sh  killswitch-cleanup.sh  killswitch-setup.sh  release-xr-setup.sh  release-xr-share.sh  udp-tproxy-cleanup.sh  udp-tproxy-setup.sh
tools/loadtest/: README.md  loadgen.py  testserver.py
tools/taskctl/: README.md  archive.go  board.go  board_test.go  go.mod  lint.go  main.go  ops.go  ops_test.go
xr-android/: .gitignore  build.sh  gradle.properties  gradlew  settings.gradle.kts  setup.sh
xr-android-jni/: Cargo.toml
xr-android-jni/src/: lib.rs
xr-android/app/: build.gradle.kts
xr-android/app/src/main/: AndroidManifest.xml
xr-android/app/src/main/java/com/xrproxy/app/: XrApp.kt
xr-android/app/src/main/java/com/xrproxy/app/data/: JournalSettings.kt  PresetCacheReader.kt  SafMirror.kt  ServerProfile.kt  ServerRepository.kt  ShareRepository.kt  ShareStore.kt  StorageAccess.kt  TrustedNetworksRepository.kt  UserRulesStore.kt
xr-android/app/src/main/java/com/xrproxy/app/jni/: NativeBridge.kt
xr-android/app/src/main/java/com/xrproxy/app/model/: HealthLevel.kt  Share.kt
xr-android/app/src/main/java/com/xrproxy/app/service/: RestrictionProbe.kt  ShareSyncWorker.kt  XrVpnService.kt
xr-android/app/src/main/java/com/xrproxy/app/ui/: MainActivity.kt  VpnViewModel.kt
xr-android/app/src/main/java/com/xrproxy/app/ui/components/: DebugSection.kt  HealthFace.kt  ShieldArrowIcon.kt  StatsCard.kt  XrSnackbar.kt
xr-android/app/src/main/java/com/xrproxy/app/update/: UpdateManager.kt
xr-android/app/src/main/res/drawable/: ic_connections.xml  ic_debug.xml  ic_download.xml  ic_error.xml  ic_expand.xml  ic_info.xml  ic_launcher.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml  ic_notification_stop.xml  ic_paste.xml  ic_qr_scan.xml  ic_speed_down.xml  ic_speed_up.xml  ic_stop.xml  ic_upload.xml  ic_uptime.xml  ic_warning_round.xml
xr-android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
xr-android/app/src/main/res/xml/: file_paths.xml
xr-client/: Cargo.toml
xr-client/src/: main.rs  proxy.rs  redirect.rs  routing.rs  sni.rs  udp_relay.rs
xr-core/: Cargo.toml
xr-core/examples/: files_demo.rs  sync_demo.rs
xr-core/src/: dns.rs  engine.rs  ip_stack.rs  journal.rs  lib.rs  onboarding.rs  presets.rs  session.rs  state.rs  stats.rs  sync.rs  trusted.rs  update.rs
xr-hub/: Cargo.toml  build.rs
xr-hub/admin-ui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
xr-hub/admin-ui/src/: App.vue  api.ts  main.ts  router.ts
xr-hub/admin-ui/src/components/: RuleRow.vue  RulesEditor.vue
xr-hub/admin-ui/src/pages/: InvitesList.vue  Login.vue  PresetEdit.vue  PresetsList.vue  SharesList.vue
xr-hub/admin-ui/src/stores/: auth.ts  invites.ts  presets.ts  shares.ts
xr-hub/src/: config.rs  embed.rs  main.rs  password_reset.rs  release.rs  signing.rs  state.rs  storage.rs
xr-hub/src/api/: app.rs  auth.rs  dist.rs  invites.rs  mod.rs  presets.rs  register.rs  share_v2.rs  shares.rs
xr-proto/: Cargo.toml
xr-proto/examples/: share_demo.rs
xr-proto/src/: app_update.rs  config.rs  invite_url.rs  lib.rs  mux.rs  mux_pool.rs  obfuscation.rs  preset.rs  protocol.rs  relay_client.rs  relay_tls.rs  routing.rs  server_pool.rs  share.rs  tunnel.rs  udp_relay.rs  user_rule.rs
xr-proto/tests/: integration.rs
xr-relay/: Cargo.toml
xr-relay/src/: config.rs  lib.rs  main.rs  registry.rs
xr-server/: Cargo.toml
xr-server/src/: fallback.rs  handler.rs  main.rs  mux_handler.rs  udp_relay.rs
xr-setup/: Cargo.toml
xr-setup/src/: actions.rs  arch.rs  fetch.rs  hub_api.rs  main.rs  openwrt.rs  render.rs  router_profile.rs  secrets.rs  server_profile.rs  steps.rs
xr-share/: Cargo.toml  README.md
xr-share/src/: auth.rs  cli.rs  config.rs  import.rs  main.rs  manifest.rs  pull.rs  push.rs  relay.rs  safepath.rs  server.rs  setup.rs
(+23 files in other folders)
