[package]
name = "xr-client"
version.workspace = true
edition.workspace = true

[features]
default = []
geoip = ["xr-proto/geoip"]

[dependencies]
xr-proto = { path = "../xr-proto" }
xr-core = { path = "../xr-core" }
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "signal", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
socket2 = { version = "0.5", features = ["all"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1"
