[package]
name = "xr-core"
version.workspace = true
edition.workspace = true

[features]
default = []
geoip = ["xr-proto/geoip"]
uniffi = ["dep:uniffi"]

[dependencies]
# `share` включает ed25519-верификацию манифеста шары (XR-046); сам
# ed25519-dalek и так уже в зависимостях (проверка APK-манифеста в update.rs),
# так что xr-client от этого не тяжелеет.
xr-proto = { path = "../xr-proto", features = ["share"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync", "fs"] }
tracing = "0.1"
smoltcp = { version = "0.12", default-features = false, features = [
    "std", "log", "medium-ip", "proto-ipv4", "proto-ipv6",
    "socket-tcp", "socket-udp", "socket-dns",
] }
uniffi = { version = "0.29", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
ed25519-dalek = "2"
base64 = "0.22"
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
