[package]
name = "xr-hub"
version.workspace = true
edition.workspace = true

[features]
default = []
dev-ui = ["tower-http/fs"]

[dependencies]
xr-proto = { path = "../xr-proto" }
axum = { version = "0.8", features = ["json"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal", "time", "sync", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rust-embed = "8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
anyhow = "1"
tempfile = "3"
subtle = "2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"
