[package]
name = "xr-proto"
version.workspace = true
edition.workspace = true

[features]
default = []
geoip = ["maxminddb"]
# Sign/verify для файлообмена (LLD-19): токены, мандаты агента и подпись
# манифеста (XR-046). Включают xr-hub, xr-share и xr-core (проверка манифеста
# на потребителе), так что через xr-core фича доезжает и до xr-client; это не
# утяжеляет его, ed25519-dalek и так в зависимостях xr-core (update.rs). Тесты
# компилируют крипто безусловно через dev-dependency.
share = ["dep:ed25519-dalek", "dep:serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
toml = "0.8"
base64 = "0.22"
rand = "0.8"
tracing = "0.1"
maxminddb = { version = "0.24", optional = true }
ed25519-dalek = { version = "2", optional = true }
tokio = { version = "1", features = ["rt", "net", "io-util", "time", "macros", "sync"] }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
ed25519-dalek = "2"
serde_json = "1"

# Demo of the share types + token sign/verify (LLD-19). Uses the gated crypto,
# so it only builds with the `share` feature — keeps `cargo test --workspace`
# (feature off) from trying to compile it.
[[example]]
name = "share_demo"
required-features = ["share"]
