[package]
name = "xr-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# `share` даёт relay-токены, мандаты агента и challenge-response регистрации, а
# также io-адаптер mux и константы протокола relay (relay_client). Транзит сам по
# себе байты не читает: крипта нужна только на гейтах (регистрация, токен).
xr-proto = { path = "../xr-proto", features = ["share"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"
ed25519-dalek = "2"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync", "test-util"] }
