[package]
name = "xr-setup"
version.workspace = true
edition.workspace = true

[dependencies]
xr-proto = { path = "../xr-proto" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Лёгкий блокирующий HTTP: логин в хаб, минт инвайта, скачивание бинарей
# из setup-dist. Тот же выбор, что у xr-share (без тяжёлого reqwest).
ureq = { version = "2", features = ["tls", "json"] }
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
# Хеш пароля админа хаба тем же алгоритмом, что проверяет xr-hub при логине.
argon2 = { version = "0.5", features = ["std"] }
libc = "0.2"

[dev-dependencies]
serde_json = "1"
